# cdn

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: cli.yml  lint.yml
.static/: scalar.html
.store/: .gitkeep
src/: app.rs  cache.rs  error.rs  main.rs  rsync.rs
src/app/: cache.rs  lock.rs  logger.rs  png.rs  skin.rs
src/rsync/: lock.rs  parser.rs
static/: doc.html
