
[package]
name = "cdn"
version = "0.0.1"
edition = "2024"
authors = ["TOwInOK <60252419+TOwInOK@users.noreply.github.com>"]
repository = "https://github.com/PulseClient-ddnet/cdn"
license = "MIT"                                                   #"Apache-2.0"

[dependencies]
ohkami = { version = "0.24.2", features = ["openapi", "rt_tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "1" }
thiserror = "^2"
tee_morphosis = "1.3.0"
image = { version = "0.25.8", default-features = false }
reqwest = "0.12.24"
dashmap = { version = "6.1.0", features = ["rayon", "serde"] }
regex = "1.12.2"
rayon = "1.11.0"
dotenvy = "0.15.7"
futures = "0.3.31"
bytes = "1.10.1"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 24
panic = 'abort'
strip = true
incremental = true
debug-assertions = false
overflow-checks = false

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = false
